# YOURREPO

CascadeProjects/skyinspection-v.2/: package-lock.json  package.json
CascadeProjects/skyinspection-v.2/src/: App.js  routes.js
CascadeProjects/skyinspection-v.2/src/components/Dashboard/: AlertCard.js  InspectionCard.js  QuickActionButton.js
CascadeProjects/skyinspection-v.2/src/components/Layout/: Layout.js  Sidebar.js
CascadeProjects/skyinspection-v.2/src/contexts/: ThemeContext.js
CascadeProjects/skyinspection-v.2/src/pages/: Analysis.js  Dashboard.js  Inspections.js  Knowledge.js  Objects.js  Settings.js
CascadeProjects/skyinspection-v.2/src/theme/: theme.js
Desktop/EY/aitax-poc/: .env.example  README.md  docker-compose.yml
Desktop/EY/aitax-poc/apps/backend/: Dockerfile  alembic.ini  pyproject.toml
Desktop/EY/aitax-poc/apps/backend/app/: main.py
Desktop/EY/aitax-poc/apps/backend/app/api/: routes.py
Desktop/EY/aitax-poc/apps/backend/app/api/endpoints/: auth.py  chat.py  documents.py  news.py  notes.py  profile.py
Desktop/EY/aitax-poc/apps/backend/app/core/: auth.py  config.py  database.py  exceptions.py
Desktop/EY/aitax-poc/apps/backend/app/models/: __init__.py  chat.py  document.py  news.py  note.py  profile.py  user.py
Desktop/EY/aitax-poc/apps/backend/app/services/: ai.py  document_processor.py
Desktop/EY/aitax-poc/apps/backend/migrations/: env.py
Desktop/EY/aitax-poc/apps/backend/migrations/versions/: 001_initial_schema.py
Desktop/EY/aitax-poc/apps/frontend/: Dockerfile  index.html  (+1 more)
Desktop/EY/aitax-poc/scripts/: seed_news.py
(+35 files in other folders)
