[tool.poetry]
name = "aitax-backend"
version = "0.1.0"
description = "Backend for AI Tax Insights application"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlmodel = "0.0.14"
pydantic = {extras = ["email"], version = "^2.6.0"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
langchain = "^0.2.0"
langchain-openai = "^0.1.0"
langchain-core = "^0.2.0"
langchain-community = "^0.2.0"
chromadb = "^0.4.22"
pymupdf = "^1.23.21"
python-dotenv = "^1.0.0"
alembic = "^1.13.1"
tenacity = "^8.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.0"
isort = "^5.13.2"
mypy = "^1.8.0"
pytest-cov = "^4.1.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
